--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "2.11.0",
+    "aos": "^2.3.4",
     "bootstrap": "5.1.3",
     "next": "12.1.1",
     "react": "17.0.2",
