--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@popperjs/core": "2.11.0",
     "aos": "^2.3.4",
     "bootstrap": "5.1.3",
+    "mdb-react-ui-kit": "^3.0.0",
+    "mdb-ui-kit": "^3.11.0",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
