--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "2.11.0",
+    "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "bootstrap": "5.1.3",
     "mdb-react-ui-kit": "^3.0.0",
