--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "bootstrap": "5.1.3",
+    "jquery": "^3.6.0",
     "mdb-react-ui-kit": "^3.0.0",
     "mdb-ui-kit": "^3.11.0",
     "next": "12.1.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
   },
