--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "eslint": "8.12.0",
